<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.billspillstore.android.TabbedFlightActivity">
    <item
        android:id="@+id/menu_refer"
        android:orderInCategory="100"
        android:title="@string/refer_a_friend"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_offer"
        app:showAsAction="never"
        android:title="@string/top_offers">
    </item>
    <item
        android:id="@+id/menu_support"
        app:showAsAction="never"
        android:orderInCategory="110"
        android:title="@string/support">
    </item>
    <item
        android:id="@+id/menu_products"
        app:showAsAction="never"
        android:title="@string/top_products">
    </item>
    <item
        android:id="@+id/menu_feedback"
        app:showAsAction="never"
        android:title="@string/feedback">
    </item>
    <item
        android:id="@+id/menu_rateus"
        app:showAsAction="never"
        android:title="@string/rate_us">
    </item>
    <item
        android:id="@+id/menu_about"
        app:showAsAction="never"
        android:title="@string/about_us">
    </item>
    <item
        android:id="@+id/menu_blog"
        app:showAsAction="never"
        android:title="@string/blog">
    </item>
</menu>
